2009-10-08  Jeff Johnston  <jjohnstn@redhat.com>

	* configure.host: For RTEMS, define HAVE_ASSERT_FUNC.
	* libc/stdlib/assert.c (_assert_func): Do not specify
	__assert_func if HAVE_ASSERT_FUNC flag is set.

2009-10-08  Eric Blake  <ebb9@byu.net>

	* libc/include/getopt.h (__getopt_r, __getopt_long_r)
	(__getopt_long_only_r): Protect declarations, to avoid compiler
	warning.

2009-10-07  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/nl_langinfo.c (nl_langinfo): Just return current locale
	charset on Cygwin.

2009-10-03  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/mbtowc_r.c (__utf8_mbtowc): Allow CESU-8 surrogate
	value encoding.
	* libc/stdlib/wctomb_r.c (__utf8_mbtowc): Allow CESU-8 surrogate
	value decoding.

2009-09-29  Corinna Vinschen  <corinna@vinschen.de>

	* libc/locale/locale.c (loadlocale): Allow "C." same as "C-" as locale
	prefix.  Add some words to documentation.

2009-09-29  Corinna Vinschen  <corinna@vinschen.de>

	* libc/stdlib/sb_charsets.c: Throughout, translate undefined
	characters to their corresponding Windows Unicode value.

2009-09-28  Michael Eager <eager@eagercon.com>

	* configure.host: Add microblaze.
	* libc/include/machine/ieeefp.h [MICROBLAZE]: Define __IEEE_BIG_ENDIAN.
	* libc/include/machine/setjmp.h [MICROBLAZE]: Define _JBLEN, _JBTYPE.
	* libc/include/sys/config.h [MICROBLAZE]: Define _REENT_SMALL,
	_UNIX98_THREAD_MUTEX_ATTRIBUTES.
	* libc/include/sys/types.h: Treat XMK like rtems, define
	PTHREAD_MUTEX_NORMAL, PTHREAD_MUTEX_ERRORCHECK, PTHREAD_MUTEX_RECURSIVE,
	PTHREAD_MUTEX_DEFAULT, PTHREAD_STACK_MIN, define stuct pthread_attr_s.
	* libc/machine/configure.in: Add microblaze.
	* libc/machine/configure: Add microblaze (not regenerated).
	* libc/machine/microblaze/configure.in: NEW.
	* libc/machine/microblaze/configure: Generate.
	* libc/machine/microblaze/Makefile.am: NEW.
	* libc/machine/microblaze/Makefile.in: Generate.
	* libc/machine/microblaze/{abort.c, strcmp.c, strcpy.c, strlen.c,